# django-ninja-api-template

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  env  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
backend/: manage.py
backend/config/: api.py  celery.py  settings.py  urls.py
backend/events/: admin.py  api.py  models.py  schemas.py  services.py  tasks.py
backend/events/management/commands/: initdata.py
backend/events/migrations/: 0001_initial.py  0002_remove_event_address_remove_event_seats_available_and_more.py  0003_alter_event_options.py
backend/notifications/: admin.py  models.py  services.py  tasks.py
backend/notifications/grpc/: client.py  notyfy_pb2_grpc.py
backend/notifications/migrations/: 0001_initial.py
backend/users/: api.py  schemas.py  services.py
notify_grpc_service/: .dockerignore  Dockerfile  client.py  notyfy.proto  notyfy_pb2.py  notyfy_pb2_grpc.py  pyproject.toml  server.py
